test/cherry/Language/block_scope_error.cherry
# RUN: not cherry-driver -typecheck %s 2>&1 | FileCheck %s

fn main(): UInt64 {
  if true {
    var scopedValue: UInt64 = 1;
  } else {
  }

  scopedValue
}

# CHECK: error: undefined variable
